[package]
name = "psst-croft"
version = "0.1.0"
authors = ["Jan Pochyla <jpochyla@gmail.com>"]
edition = "2018"

[dependencies]
psst-core = { path = "../psst/psst-core" }

env_logger = "0.8"
log = "0.4"

crossbeam-channel = "0.5"
druid-shell = { git = "https://github.com/jpochyla/druid", branch = "psst", features = ["raw-win-handle"] }
druid = { git = "https://github.com/jpochyla/druid", branch = "psst", features = ["im", "image", "jpeg", "png", "serde"] }
fs_extra = "1.2"
itertools = "0.10"
lru-cache = "0.1"
once_cell = "1.8"
open = "2.0"
parking_lot = "0.11"
platform-dirs = "0.3"
rand = "0.8"
raw-window-handle = "0.3"
regex = "1.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
souvlaki = "0.5.0"
time = { version = "0.3", features = ["macros", "formatting"] }
threadpool = "1.8"
ureq = { version = "2.1", features = ["json", "socks-proxy"] }
url = "2.2"
